[package]
name = "equistitch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "graphics"]
authors = [
    "Teemu Heikkilä <teemu@emblica.com>",
    "Emblica Ltd <hello@emblica.com>",
]

[dependencies]
image = "0.23.14"
cgmath = "0.18.0"
anyhow = "1.0.53"
clap = { version = "3.0.13", features = ["derive"] }